[package]
name = "belief_propagation"
version = "0.1.0"
authors = ["Julius Hermelink <julius.hermelink@unibw.de>"]
edition = "2021"

[lib]
name = "belief_propagation"
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam = "0.8.0"
itertools = "0.10.0"
rayon = "=1.10.0"
rustfft = "6"
pyo3 = { version = "0.22", features = ["extension-module"] }

[features]
debug_output = []
info_output = []
thread_output = []
debug_info_on_error = []
progress_output = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
