[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "belief_propagation"
version = "0.1.0"
requires-python = ">=3.8"
description = "Belief Propagation library with Python bindings"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "belief_propagation"
